K8s: fixed names according to images

--- a/k8s/gateway-deployment.yaml
+++ b/k8s/gateway-deployment.yaml
@@ -18,8 +18,8 @@ spec:
         app: gateway
     spec:
       containers:
-      - image: spring-6-gateway:0.0.1-SNAPSHOT
-        name: spring-6-gateway
+      - image: spring-gateway:0.0.1-SNAPSHOT
+        name: spring-gateway
         resources: {}
         env:
           - name: SPRING_PROFILES_ACTIVE
