--- a/k8s/r2dbc-service.yaml
+++ b/k8s/r2dbc-service.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: reactive
-  name: reactive
+    app: r2dbc
+  name: r2dbc
 spec:
   ports:
   - name: 8080-8080
@@ -12,7 +12,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: reactive
+    app: r2dbc
   type: ClusterIP
 status:
   loadBalancer: {}
